# indeed-builder

./: .gitignore  build.sh  pyproject.toml
.claude/: settings.local.json
.github/workflows/: release.yml
src/oasis/: browse.py  config.py  database.py  documents.py  main.py  scraper.py  search.py  tailor.py  tui.py
